<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >
  <!-- Code Label -->
  <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:paddingTop="10dip"
            android:layout_marginRight="5dp"
            android:textStyle="bold" />
  <TextView 
      		android:id="@+id/code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code" />
  
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >
  <!-- Location From Label -->
  <TextView 
      		android:text="@string/locationfrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textStyle="bold" />
  <TextView 
      		android:id="@+id/locationFrom_label"
      		android:text="@string/locationfrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >
  <!-- Location To Label -->
  <TextView android:textStyle="bold"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:layout_marginRight="5dp"
      		android:text="@string/locationto" />
  
  <TextView android:id="@+id/locationTo_label"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/locationto" />
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >
  <!-- Customer Label -->
  <TextView android:textStyle="bold"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:layout_marginRight="5dp"
      		android:text="@string/customer" />
  
  <TextView 
      		android:id="@+id/customer_label"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/customer" />
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >
  <!-- Salesman Label -->
  <TextView 
      		android:textStyle="bold"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:layout_marginRight="5dp"
      		android:text="@string/salesman" />
  
  <TextView 
      		android:id="@+id/salesman_label"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/salesman" />
  </LinearLayout>

  <Button
      android:id="@+id/btUpdate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/update" />
  
</LinearLayout>